# async-graphql-dynamic-extend

./: Cargo.toml  README.md  schema.graphql
design/: README.md
src/: main.rs  schema.rs  schema_utils.rs
src/schema/: context_fields.rs  enums.rs  expand_object.rs  expand_object_with_self.rs  extend_hello.rs  extend_object.rs  hello.rs  implements_hello.rs  inject_field.rs  life_time.rs  mod.rs  nullable_array.rs  registry.rs  simple_object.rs  union_with_interface.rs
src/schema/input/: default_value.rs  list.rs  mod.rs  oneof.rs  optional.rs  reference.rs  simple.rs
src/schema/interface/: auto.rs  mod.rs  output.rs  output_list.rs  output_ref.rs  resolved.rs  simple.rs  utils.rs
src/schema/mutation/: mod.rs  simple.rs  with_self.rs
src/schema/output_types/: list.rs  mod.rs  optionals.rs  resolved.rs  resolved_list.rs  resolved_list_and_result.rs  resolved_optional.rs  resolved_result.rs  simple.rs  utils.rs
src/schema/simple_object/: static_schema.rs
src/schema/union/: simple.rs
