[package]
name = "async-graphql-dynamic-extend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { path = "../async-graphql", features = ["dynamic-schema"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"

[dev-dependencies]
regex = "1"
indoc = "1.0"
