[package]
name = "async-graphql-dynamic-extend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "5.0.5", features = ["dynamic-schema"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
inventory = "0.3"

[dev-dependencies]
regex = "1"
indoc = "1.0"
